compiler/testData/diagnostics/tests/dataClasses/dataObjectDisabled.kt
// RUN_PIPELINE_TILL: SOURCE
// LANGUAGE: -DataObjects
<!UNSUPPORTED_FEATURE!>data<!> object Object
